--- a/SistemaDeFavoritos/appsettings.json
+++ b/SistemaDeFavoritos/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=./; DataBase=DB_SistemaDeFavoritos; User Id=sa; Password=teste123 " // o Server=./ significa Localhost
+
+  },
   "AllowedHosts": "*"
 }
